--- a/HQSOFT.Common/src/HQSOFT.Common.Domain.Shared/Localization/Common/en.json
+++ b/HQSOFT.Common/src/HQSOFT.Common.Domain.Shared/Localization/Common/en.json
@@ -90,6 +90,29 @@
     "MaxCanWrite": "Max Can Write",
     "MaxCanSubmit": "Max Can Submit",
     "MaxCanShare": "Max Can Share",
-    "IdentityUser": "Identity user"
+    "IdentityUser": "Identity user",
+    "Permission:HQNotifications": "H Q Notifications",
+    "HQNotifications": "H Q Notifications",
+    "NewHQNotification": "New H Q Notification",
+    "ToUser": "To User",
+    "FromUser": "From User",
+    "NotiTitle": "Noti Title",
+    "NotiBody": "Noti Body",
+    "Type": "Type",
+    "isRead": "is Read",
+    "Menu:HQNotifications": "H Q Notifications",
+    "HQNotification": "H Q Notification",
+    "MinToUser": "Min To User",
+    "MinFromUser": "Min From User",
+    "MinNotiTitle": "Min Noti Title",
+    "MinNotiBody": "Min Noti Body",
+    "MinType": "Min Type",
+    "MinisRead": "Min is Read",
+    "MaxToUser": "Max To User",
+    "MaxFromUser": "Max From User",
+    "MaxNotiTitle": "Max Noti Title",
+    "MaxNotiBody": "Max Noti Body",
+    "MaxType": "Max Type",
+    "MaxisRead": "Max is Read"
   }
 }
